test/good/generics/implicit06.px

func negate(n) def
    return -n

func positive(n) def
    return negate(n) < 0

print positive(3)
print positive(negate(1))
print not positive(0)
