test/bad/functions/cmp01.px

func f() Int def
    return 0

func g() Int def
    return 1

f < g
